--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0"
 
+    implementation 'androidx.compose.runtime:runtime-livedata:1.3.3'
+
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
