--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,9 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.3.3'
 
     // Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Coil (for loading images from the network)
     implementation "io.coil-kt:coil-compose:2.2.2"
