--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:theme="@style/Theme.MakeUpApiApplication"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name=".ui.MainActivity"
                 android:exported="true"
                 android:theme="@style/Theme.MakeUpApiApplication">
             <intent-filter>
